src/oblig2patch/src/tests/oblig2/errors/wrong_rel_operand_type_fail.cmp
program wrong_rel_operand_type_fail
begin

    
    proc main()
    begin
        var b : bool;
        var s : string;
        var b2 : bool
     in
        s := "bad operand";
        b := 5 = b2
    end

end